--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,26 +2,28 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [dev, main]
+    branches:
+      - dev
+      - main
 
 permissions:
   contents: write
   packages: write
-  actions: write
 
 env:
   APP_NAME: expressor
   MAIN_CLI_CLASS: com.diezam04.expresso.adapters.cli.Cli
   MAIN_REST_CLASS: com.diezam04.expresso.adapters.rest.RestApi
-  VERSION: 3.2
-  DOCKERHUB_USERNAME: antonyoviedo
 
 jobs:
-  build-and-test:
+  build-linux:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 40
+    outputs:
+      version: ${{ steps.stage.outputs.version }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
@@ -30,192 +32,120 @@ jobs:
           java-version: '24'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn -B -DskipTests package
+      - name: Build project
+        run: mvn -B clean package
 
-      - name: Check Docker Hub credentials
-        id: check_docker
+      - name: Stage artifacts
+        id: stage
         run: |
-          if [ -n "${DOCKERHUB_USERNAME:-}" ] && [ -n "${DOCKERHUB_TOKEN:-}" ]; then
-            echo "available=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "available=false" >> "$GITHUB_OUTPUT"
+          set -euo pipefail
+          VERSION=$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)
+          DIST=dist
+          mkdir -p "$DIST"
+
+          CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name "expresso-cli-*.jar" ! -name "original-*.jar" -print -quit)
+          REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name "expresso-rest-*.jar" ! -name "*.original" -print -quit)
+
+          if [ -z "$CLI_JAR" ]; then
+            echo "Unable to locate CLI jar" >&2
+            exit 1
+          fi
+          if [ -z "$REST_JAR" ]; then
+            echo "Unable to locate REST jar" >&2
+            exit 1
           fi
 
-      - name: Prepare release JARs
-        id: prepare
-        env:
-          APP_NAME: ${{ env.APP_NAME }}
-          VERSION: ${{ env.VERSION }}
+          CLI_DEST="${APP_NAME}-${VERSION}-cli.jar"
+          REST_DEST="${APP_NAME}-${VERSION}-rest.jar"
+
+          cp "$CLI_JAR" "$DIST/$CLI_DEST"
+          cp "$REST_JAR" "$DIST/$REST_DEST"
+
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "cli=$DIST/$CLI_DEST" >> "$GITHUB_OUTPUT"
+          echo "rest=$DIST/$REST_DEST" >> "$GITHUB_OUTPUT"
+
+      - name: Smoke test CLI
         run: |
           set -euo pipefail
-          CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          [ -z "$CLI_JAR" ] && CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          [ -z "$CLI_JAR" ] && { echo "No CLI jar found under expresso-cli/target" >&2; exit 1; }
+          CLI_JAR='${{ steps.stage.outputs.cli }}'
+          java -jar "$CLI_JAR" --help
+          mkdir -p tmp-output
+          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out tmp-output --verbose
+          java -jar "$CLI_JAR" build examples/HelloWorld0.expresso --out tmp-output --verbose
+          java -jar "$CLI_JAR" run examples/HelloWorld0.expresso --out tmp-output --verbose
+          java -jar "$CLI_JAR" -V
 
-          REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          [ -z "$REST_JAR" ] && REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          [ -z "$REST_JAR" ] && { echo "No REST jar found under expresso-rest/target" >&2; exit 1; }
-
-          RELEASE_CLI="${APP_NAME}-${VERSION}-cli.jar"
-          RELEASE_REST="${APP_NAME}-${VERSION}-rest.jar"
-          cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
-          cp "$REST_JAR" "expresso-rest/target/${RELEASE_REST}"
-
-          echo "cli_path=expresso-cli/target/${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
-          echo "rest_path=expresso-rest/target/${RELEASE_REST}" >> "$GITHUB_OUTPUT"
-
-      - name: Validate REST health endpoint
+      - name: Smoke test REST API
         run: |
           set -euo pipefail
-          REST_JAR="${{ steps.prepare.outputs.rest_path }}"
-          echo "Launching $REST_JAR"
+          REST_JAR='${{ steps.stage.outputs.rest }}'
           export SERVER_PORT=8081
           java -jar "$REST_JAR" >/tmp/rest.log 2>&1 &
+          PID=$!
           cleanup() {
-            kill %1 >/dev/null 2>&1 || true
-            wait %1 >/dev/null 2>&1 || true
-            cat /tmp/rest.log || true
+            kill "$PID" >/dev/null 2>&1 || true
+            wait "$PID" >/dev/null 2>&1 || true
+            tail -n 100 /tmp/rest.log || true
           }
-          trap cleanup INT TERM EXIT
+          trap cleanup EXIT
           for _ in $(seq 1 30); do
-            if curl -sSf http://127.0.0.1:8081/api/v1/health | grep -q 'ok'; then
-              echo "REST healthcheck passed"
+            if curl -sSf "http://127.0.0.1:${SERVER_PORT}/api/v1/health" | grep -q 'ok'; then
               exit 0
             fi
             sleep 2
           done
-          echo "REST healthcheck failed" >&2
+          echo "REST API failed healthcheck" >&2
           exit 1
 
-      - name: Smoke test CLI jar
+      - name: Build Debian package (jpackage)
         run: |
           set -euo pipefail
-          CLI_JAR="${{ steps.prepare.outputs.cli_path }}"
-          echo "Testing $CLI_JAR"
-          java -jar "$CLI_JAR" --help
-          mkdir -p output
-          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" build     examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" run       examples/HelloWorld0.expresso --out output --verbose
+          VERSION='${{ steps.stage.outputs.version }}'
+          DIST=dist
+          CLI_JAR_BASENAME=$(basename '${{ steps.stage.outputs.cli }}')
 
-      - name: Upload CLI jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: "${{ steps.prepare.outputs.cli_path }}"
-          if-no-files-found: error
-
-      - name: Upload REST jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: "${{ steps.prepare.outputs.rest_path }}"
-          if-no-files-found: error
-          
-  package-deb:
-    needs: [build-and-test]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Prepare target directory
-        run: mkdir -p target
-
-      - name: Download CLI jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: target
-
-      - name: Write Debian maintainer scripts
-        run: |
-          mkdir -p packaging
-          cat > packaging/postinst <<EOF
-          #!/bin/sh
-          set -e
-          ln -sf /opt/${APP_NAME}/bin/${APP_NAME} /usr/local/bin/${APP_NAME}
-          exit 0
+          mkdir -p packaging/debian
+          cat <<'EOF' | sed 's/^ *//' > packaging/debian/postinst
+            #!/bin/sh
+            set -e
+            ln -sf /opt/${APP_NAME}/bin/${APP_NAME} /usr/local/bin/${APP_NAME}
+            exit 0
           EOF
-          cat > packaging/postrm <<EOF
-          #!/bin/sh
-          set -e
-          rm -f /usr/local/bin/${APP_NAME}
-          exit 0
+          cat <<'EOF' | sed 's/^ *//' > packaging/debian/postrm
+            #!/bin/sh
+            set -e
+            rm -f /usr/local/bin/${APP_NAME}
+            exit 0
           EOF
-          chmod 755 packaging/postinst packaging/postrm
+          chmod 755 packaging/debian/postinst packaging/debian/postrm
 
-      - name: Build Debian package
-        run: |
-          set -euo pipefail
-          mkdir -p dist
           jpackage \
             --type deb \
             --name "${APP_NAME}" \
             --linux-package-name "${APP_NAME}" \
-            --input target \
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" \
+            --input "$DIST" \
+            --main-jar "$CLI_JAR_BASENAME" \
             --main-class "${MAIN_CLI_CLASS}" \
-            --app-version "${VERSION}" \
-            --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
-            --resource-dir packaging \
-            --dest dist \
+            --app-version "$VERSION" \
+            --linux-deb-maintainer "Expresso Team <support@expresso.dev>" \
+            --resource-dir packaging/debian \
+            --dest "$DIST" \
             --verbose
-          mv dist/*.deb "dist/${APP_NAME}-${VERSION}.deb"
 
-      - name: Upload Debian package
+      - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: dist/*.deb
-          if-no-files-found: error
+          name: expressor-${{ steps.stage.outputs.version }}-linux
+          path: dist/
 
-  docker-image:
-    needs: [build-and-test]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    env:
-      REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Hub login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Download REST jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: artifacts
-
-      - name: Build Docker image
-        run: |
-          set -euo pipefail
-          REST_JAR=$(find artifacts -maxdepth 1 -name "*-rest.jar" -print -quit)
-          if [ -z "$REST_JAR" ]; then
-            echo "REST jar not found" >&2
-            exit 1
-          fi
-          mkdir -p expresso-rest/target
-          cp "$REST_JAR" expresso-rest/target/
-          docker build -t antonyoviedo/expresso:latest .
-          docker push antonyoviedo/expresso:latest
-
-  package-msi:
-    needs: [build-and-test]
+  package-windows:
     runs-on: windows-latest
+    timeout-minutes: 30
+    needs: build-linux
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
@@ -223,142 +153,44 @@ jobs:
           distribution: temurin
           java-version: '24'
 
-      - name: Install WiX
-        shell: powershell
-        run: choco install wixtoolset -y
-
-      - name: Download JARs
+      - name: Download staged artifacts
         uses: actions/download-artifact@v4
         with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: artifacts
+          name: expressor-${{ needs.build-linux.outputs.version }}-linux
+          path: dist
 
-      - name: jpackage -> app-image (CLI-only)
-        shell: powershell
+      - name: Build Windows executable (jpackage)
+        shell: pwsh
         run: |
-          New-Item -ItemType Directory -Force -Path out | Out-Null
+          $version = '${{ needs.build-linux.outputs.version }}'
+          $dist = "dist"
+          $cliJar = Join-Path $dist "${env:APP_NAME}-$version-cli.jar"
+          if (-not (Test-Path $cliJar)) {
+            throw "CLI jar not found at $cliJar"
+          }
+
+          $outputDir = Join-Path $dist "windows"
+          New-Item -ItemType Directory -Force -Path $outputDir | Out-Null
+
           jpackage `
-            --type app-image `
+            --type exe `
             --name "$env:APP_NAME" `
-            --input target `
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
+            --app-version "$version" `
+            --input $dist `
+            --main-jar (Split-Path -Leaf $cliJar) `
             --main-class "$env:MAIN_CLI_CLASS" `
             --win-console `
-            --dest out
+            --dest $outputDir `
+            --verbose
 
-      - name: WiX harvest
-        shell: powershell
-        run: |
-              $src = Join-Path $PWD "out\$env:APP_NAME"
-              & "$env:WIX\bin\heat.exe" dir $src -cg AppFiles -dr INSTALLFOLDER -srd -var var.SourceDir -ag -out harvest.wxs
+          $exe = Get-ChildItem -Path $outputDir -Filter "*.exe" | Select-Object -First 1
+          if (-not $exe) {
+            throw "jpackage did not produce an executable"
+          }
+          Write-Host "Generated executable: $($exe.FullName)"
 
-      - name: Build MSI (WiX)
-        shell: powershell
-        run: |
-          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
-          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -sval -o "dist\expressor-1.1.msi" obj\product.wixobj obj\harvest.wixobj
-
-      - name: Upload .msi
+      - name: Upload Windows executable
         uses: actions/upload-artifact@v4
         with:
-          name: windows-msi
-          path: dist/*.msi
-          if-no-files-found: error
-
-  release:
-    runs-on: ubuntu-latest
-    needs:
-      - build-and-test
-      - docker-image
-      - package-deb
-      - package-msi
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download built CLI jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: artifacts/cli
-
-      - name: Download REST jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: artifacts/rest
-
-      - name: Download Debian package
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: artifacts/deb
-
-      - name: Download Windows MSI
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
-          path: artifacts/msi
-
-      - name: Download Windows EXE
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          path: artifacts/exe
-
-      - name: Create GitHub release
-        id: gh_release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: "v${{ env.VERSION }}"
-          target_commitish: ${{ github.sha }}
-          name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
-          generate_release_notes: true
-          files: |
-            artifacts/cli/*.jar
-            artifacts/rest/*.jar
-            artifacts/deb/*.deb
-            artifacts/msi/*.msi
-            artifacts/exe/*.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Discord notify (success)
-        if: ${{ success() }}
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: |
-            ✅ **Release created**
-            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
-            • Tag: `${{ github.ref_name }}`
-            • Author: ${{ github.actor }}
-            • Commit: `${{ github.sha }}`
-            • Release: ${{ steps.gh_release.outputs.html_url }}
-            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Discord notify (failure)
-        if: ${{ failure() }}
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: |
-            ❌ **Release failed**
-            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
-            • Ref: `${{ github.ref_name }}`
-            • Author: ${{ github.actor }}
-            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Delete uploaded artifacts
-        if: ${{ success() }}
-        uses: geekyeggo/delete-artifact@v4
-        with:
-          name: |
-            ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
-            ${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.deb
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
-            ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
+          name: expressor-${{ needs.build-linux.outputs.version }}-windows
+          path: dist/windows/*.exe
